--- a/task/Dockerfile
+++ b/task/Dockerfile
@@ -1,3 +1,3 @@
 FROM ansible/awx:15.0.1
-COPY ../settings.py /etc/tower/settings.py
+COPY settings.py /etc/tower/settings.py
 CMD /usr/bin/launch_awx_task.sh
