--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,1 +1,6 @@
-FROM plsssolucoes/ansible-redis:31
+#FROM plsssolucoes/ansible-redis:31
+FROM redis:6.0.9
+
+COPY redis.conf /usr/local/etc/redis/redis.conf
+
+CMD redis-server /usr/local/etc/redis/redis.conf
