Ajuste para evitar erro no start dos containers

--- a/task/Dockerfile
+++ b/task/Dockerfile
@@ -1,3 +1,4 @@
 FROM ansible/awx:15.0.1
 COPY settings.py /etc/tower/settings.py
+RUN touch /etc/tower/conf.d/environment.sh
 CMD /usr/bin/launch_awx_task.sh
