Ajuste para evitar erro no start dos containers

--- a/task/Dockerfile
+++ b/task/Dockerfile
@@ -1,4 +1,5 @@
 FROM ansible/awx:15.0.1
+USER root
 COPY settings.py /etc/tower/settings.py
 RUN mkdir -p /etc/tower/conf.d
 RUN touch /etc/tower/conf.d/environment.sh
