--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,5 @@
 FROM ansible/awx:15.0.1
+USER root
 COPY settings.py /etc/tower/settings.py
 COPY nginx.conf /etc/nginx/nginx.conf
 RUN mkdir -p /etc/tower/conf.d
