--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,5 +1,5 @@
 FROM redis:6.0.9
-
+LABEL maintainer="danilo.liebel@kmm.com.br"
 COPY redis.conf /usr/local/etc/redis/redis.conf
 
 CMD redis-server /usr/local/etc/redis/redis.conf
