Retirada de variavel

--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -2,4 +2,5 @@ FROM redis:6.0.9
 LABEL maintainer="danilo.liebel@kmm.com.br"
 COPY redis.conf /usr/local/etc/redis/redis.conf
 
-CMD redis-server /usr/local/etc/redis/redis.conf
+ENTRYPOINT redis-server
+CMD ["/usr/local/etc/redis/redis.conf"]
