--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,8 @@
-FROM ansible/awx:${ANSIBLE_VERSION}
+FROM ansible/awx:15.0.1
 LABEL maintainer="danilo.liebel@kmm.com.br"
 USER root
 COPY settings.py /etc/tower/settings.py
 COPY nginx.conf /etc/nginx/nginx.conf
 RUN mkdir -p /etc/tower/conf.d
 RUN touch /etc/tower/conf.d/environment.sh
-CMD /usr/bin/launch_awx.sh
+ENTRYPOINT /usr/bin/launch_awx.sh
