--- a/task/Dockerfile
+++ b/task/Dockerfile
@@ -4,5 +4,6 @@ USER root
 COPY settings.py /etc/tower/settings.py
 RUN mkdir -p /etc/tower/conf.d
 RUN touch /etc/tower/conf.d/environment.sh
+RUN ansible-galaxy collection install community.windows
 RUN sed -i '/^#.* command_warnings /s/^#//' /etc/ansible/ansible.cfg
 ENTRYPOINT /usr/bin/launch_awx_task.sh
